--- a/index.css
+++ b/index.css
@@ -1,8 +1,10 @@
 :root{
-    --blue: rgb(49, 49, 122)
+    --blue: rgb(49, 49, 122);
+    --blue2: rgb(12, 63, 114);
+    --blue3: rgb(11, 34, 45);
 }
 html {
-    background-color: var(--blue);
+    background-color: var(--blue3);
 }
 
 body {
@@ -20,11 +22,14 @@ body > * {
 
 #header {
     margin-top: 0;
-    background-color: white;
+    background-color: var(--blue2);
 
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+#header a {
+    color: black;
 }
 
 #title-container {
@@ -45,9 +50,6 @@ body > * {
 }
 #header-img {
     height: 70px;
-    width: 70px;
-    background-color: blueviolet;
-
     grid-area: image;
 }
 #header-title {
@@ -68,6 +70,38 @@ body > * {
 
 #banner {
     text-align: center;
+}
+
+#features {   display: grid;
+    grid-template-columns: min-content auto;
+    column-gap: 5em;
+
+
+    justify-content: center;
+}
+#features .container {
+ 
+}
+
+#price {
+    padding-top: 0;
+}
+#price-header {
+    text-align: center;
+}
+#price-flex {
+    height: 350px;
+
+    display: flex;
+    flex-direction:row;
+    justify-content: space-around;
+}
+#price-flex > * {
+    height: 100%;
+    width: 15%;
+    /* background-color: var(--blue); */
+    text-align: center;
+    border: 1px solid black;
 }
 
 
